--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-hello
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UFT-8">
+        <script src="./main.js"></script>
+    </head>
+    <body>
+        <h1>hello world</h1>
+    </body>
+</html>
