--- a/index.html
+++ b/index.html
@@ -1,27 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="UFT-8">
-        <script src="./main.js"></script>
-        <!-- これがないとjsが読み込まれない -->
+        <meta charset="UTF-8">
+        <script src="./main.js" defer></script>
+        <!-- deferをつけると、HTMLの読み込みが完了した後にJavascriptが実行される -->
     </head>
     <body>
-        <h1 id="main-title">MainTitle</h1>
-        <p class="contents">contents</p>
+      <h1 id="main-title">MainTitle</h1>
+      <p class="contents">contents</p>
 
-        <div id="wrapper">
+      <div id="wrapper">
         <div class="box">子要素1</div>
         <div class="box">子要素2</div>
-        </div>
+      </div>
 
-        <div id="parent">
+      <div id="parent">
         <div id="child">取り除かれる要素</div>
-        </div>
-
-
+      </div>
+      
     </body>
 </html>
-
-<!-- wrapperとparentがバツで実装できてない？
-説明欲しい
-nullも説明ほしい→要素が存在しない場合？？ -->
